--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "authors": [
         {
             "name": "Nicholas Ciechanowski",
-            "email": "nicholasaciechanowski@gmail.com"
+            "email": "nicholas@ciech.anow.ski"
         }
     ],
     "autoload": {
