--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fips",
     "iso"
   ],
-  "author": "Nicholas Ciechanowski <nicholasaciechanowski@gmail.com>",
+  "author": "Nicholas Ciechanowski <nicholas@ciech.anow.ski",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ALameLlama/geographer-data/issues"
